syntax = "proto3";
import "base.proto";
option java_package = "com.simple.audit";
service Auditor {
  rpc audit (AuditInput) returns (AuditResult) {}
  rpc history (HistoryInput) returns (stream HistoryResult) {}
}

message AuditInput {
  string id = 1;
  int64 responseTime = 2;
  int32 result = 5;
  int64 timestamp = 6;
}
message AuditResult {
  bool success = 1;
}
message HistoryInput {
  int32 maxResult = 1;
}
message HistoryResult {
  int64 timestamp = 1;
  string record = 2;
}