syntax = "proto3";
import "base.proto";
option java_package = "com.simple.compute";
service Computer {
  rpc compute (ComputationInput) returns (ComputationResult) {}
}
message ComputationInput {
  OPERATOR operator = 1;
  int32 x = 2;
  int32 y = 3;
}
message ComputationResult {
  string id = 1;
  int32 result = 2;
}